--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -56,7 +56,7 @@ task:
 
        - git clone https://github.com/OmarAlCoptan/local_manifest.git -b gtaxllte .repo/local_manifests
 
-       - repo sync --force-sync --no-tags --no-clone-bundle -c
+       - repo sync -c -j$(nproc --all) --force-sync --no-clone-bundle --no-tags
 
        - . build/envsetup.sh
 
