--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -68,11 +68,11 @@ task:
 
        - export USE_CCACHE=1
 
-       - ccache -M 20G # It took only 6.4GB for mido
+       - ccache -M 20G
     
-       - ccache -o compression=true # Will save times and data to download and upload ccache, also negligible performance issue
+       - ccache -o compression=true
 
-       - ccache -z # Clear old stats, so monitor script will provide real ccache statistics
+       - ccache -z
 
        - make api-stubs-docs || echo no problem
 
