--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,8 +1,8 @@
 task:
 
-  name: "Setting Up, Syncing, Building and Uploading...."
+  name: "Setting Up, Syncing, Building and Uploading..."
 
-  timeout_in: 4h
+  timeout_in: 240m
 
   container:
 
