--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -3,13 +3,12 @@ task:
   name: "Setting Up, Syncing, Building and Uploading..."
 
   timeout_in: 240m
-
+  
+     container:
       image: ubuntu:20.04
-
       cpu: 8
-
       memory: 32G
-
+      
   Build-Env-Setup_script:
 
        - export DEBIAN_FRONTEND=noninteractive
