--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,9 +1,3 @@
-env:
-    DEVICE: gtaxllte
-    OEM: samsung
-    EXTRA_CMD: export SKIP_ABI_CHECKS=true
-    LUNCH_COMBO: lineage_gtaxllte-userdebug
-    OUTPUT: lineage*.zip‏
 task:
   name: "Setting Up, Syncing, Building and Uploading..."
   timeout_in: 240m  
@@ -23,8 +17,8 @@ task:
        - sudo apt update -y && sudo apt install git aria2 curl wget rsync zip unzip lzma cpio ccache clang -y
        - sudo apt install python3 -y
        - sudo ln -sf /usr/bin/python3 /usr/bin/python
-       - git config --global user.name "Sushrut1101"
-       - git config --global user.email "guptasushrut@gmail.com"
+       - git config --global user.name "mrx7014"
+       - git config --global user.email "safen894@gmail.com"
        - git clone https://github.com/akhilnarang/scripts.git ~/scripts
        - cd ~/scripts
        - sudo bash setup/android_build_env.sh
@@ -39,11 +33,11 @@ task:
       - echo "============================"
       - echo "Syncing The Sources...."
       - echo "============================"
-      - mkdir lineage19.1
-      - cd lineage19.1
-      - repo init -u https://github.com/LineageOS/android.git -b lineage-19.1
-      - git clone https://github.com/TALUAtGitHub/gtaxl-manifests.git -b lineage-19.1 .repo/local_manifests
-      - repo sync --force-sync --no-tags --no-clone-bundle -c
+      - mkdir ofox
+      - cd ofox
+      - git clone https://gitlab.com/OrangeFox/sync.git
+      - cd /ofox/sync/
+      - ./orangefox_sync.sh --branch 11.0 --path ~/fox_11.0
       - echo "============================"
       - echo "Syncing Complete!"
       - echo "============================"
@@ -52,20 +46,19 @@ task:
       - echo "============================"
       - echo "Starting the Build..."
       - echo "============================"
-      - cd lineage19.1
-      - $EXTRA_CMD
-      - export USE_CCACHE=1
-      - export CCACHE_EXEC=/usr/bin/ccache
-      - ccache -M 50G
-      - . build/envsetup.sh
-      - lunch lineage_gtaxllte-userdebug
-      - mka otapackage
-     
+      - cd
+      - cd fox_11.0
+      - git clone https://github.com/mrx7014/android_device_samsung_gtaxllte_twrp device/samsung/gtaxllte
+      - source build/envsetup.sh
+      - export ALLOW_MISSING_DEPENDENCIES=true
+      - export FOX_USE_TWRP_RECOVERY_IMAGE_BUILDER=1
+      - export LC_ALL="C"
+      - lunch omni_gtaxllte-eng
+      - mka recoveryimage
   Upload_script:
       - echo "============================"
       - echo "Uploading the Build..."
       - echo "============================"
-      - cd lineage19.1
       - cd out/target/product/"$DEVICE"
       - ls -lh
       - pwd
