--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -36,7 +36,7 @@ task:
       - mkdir ofox
       - cd ofox
       - git clone https://gitlab.com/OrangeFox/sync.git
-      - cd /ofox/sync/
+      - cd sync
       - ./orangefox_sync.sh --branch 11.0 --path ~/fox_11.0
       - echo "============================"
       - echo "Syncing Complete!"
