--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -33,11 +33,10 @@ task:
       - echo "============================"
       - echo "Syncing The Sources...."
       - echo "============================"
-      - mkdir ofox
-      - cd ofox
-      - git clone https://gitlab.com/OrangeFox/sync.git
-      - cd sync
-      - ./orangefox_sync.sh --branch 11.0 --path ~/fox_11.0
+      - mkdir twrp
+      - cd twrp
+      - repo init -u https://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git -b twrp-9.0
+      - repo init --depth=1 -u https://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git -b twrp-9.0
       - echo "============================"
       - echo "Syncing Complete!"
       - echo "============================"
@@ -46,15 +45,11 @@ task:
       - echo "============================"
       - echo "Starting the Build..."
       - echo "============================"
-      - cd
-      - cd fox_11.0
+      - cd twrp
       - git clone https://github.com/mrx7014/android_device_samsung_gtaxllte_twrp device/samsung/gtaxllte
       - source build/envsetup.sh
       - export ALLOW_MISSING_DEPENDENCIES=true
-      - export FOX_USE_TWRP_RECOVERY_IMAGE_BUILDER=1
-      - export LC_ALL="C"
-      - lunch omni_gtaxllte-eng
-      - mka recoveryimage
+      - lunch omni_gtaxllte-eng && mka recoveryimage
   Upload_script:
       - echo "============================"
       - echo "Uploading the Build..."
