--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -35,8 +35,8 @@ task:
       - echo "============================"
       - mkdir twrp
       - cd twrp
-      - repo init -u https://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git -b twrp-9.0
       - repo init --depth=1 -u https://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git -b twrp-9.0
+      - repo sync
       - echo "============================"
       - echo "Syncing Complete!"
       - echo "============================"
@@ -47,8 +47,8 @@ task:
       - echo "============================"
       - cd twrp
       - git clone https://github.com/mrx7014/android_device_samsung_gtaxllte_twrp device/samsung/gtaxllte
-      - source build/envsetup.sh
       - export ALLOW_MISSING_DEPENDENCIES=true
+      - . build/envsetup.sh
       - lunch omni_gtaxllte-eng && mka recoveryimage
   Upload_script:
       - echo "============================"
