--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -33,9 +33,9 @@ task:
       - echo "============================"
       - echo "Syncing The Sources...."
       - echo "============================"
-      - mkdir twrp
-      - cd twrp
-      - repo init --depth=1 -u https://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git -b twrp-9.0
+      - mkdir pbrp
+      - cd pbrb
+      - repo init -u https://github.com/PitchBlackRecoveryProject/manifest_pb.git -b android-9.0
       - repo sync
       - echo "============================"
       - echo "Syncing Complete!"
@@ -46,8 +46,7 @@ task:
       - echo "Starting the Build..."
       - echo "============================"
       - cd twrp
-      - git clone https://github.com/mrx7014/android_device_samsung_gtaxllte_twrp device/samsung/gtaxllte
-      - export ALLOW_MISSING_DEPENDENCIES=true
+      - git clone https://github.com/PitchBlackRecoveryProject/android_device_samsung_gtaxllte_recovery
       - . build/envsetup.sh
       - lunch omni_gtaxllte-eng && mka recoveryimage
   Upload_script:
